Simplified user management and remove redundant security config